--- a/public/css/items.css
+++ b/public/css/items.css
@@ -5,7 +5,7 @@
   padding: 10px 10px 10px 33px;
   border: 1px solid var(--ColorGrey);
   border-radius: 3px;
-  background: url(../icons/search.svg) no-repeat scroll 6px 6px;
+  background: url(../images/search.svg) no-repeat scroll 6px 6px;
   background-size: 20px 20px;
   background-color: var(--ColorWhite);
 }
