--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
     --ColorBeige: #fafafa;
     --ColorGrey: #e0e0e0;
     --ColorBlue: #5072A7;
+    --ColorMediumGrey: #b0b0b0;
     --ColorDarkBlue: #385075;
     --ColorDarkGrey: #808080;
     --ColorLightGrey: #F1F1F1;
@@ -157,6 +158,7 @@ nav {
   font-family: 'Medium';
   font-size: 16px;
   padding-top: 20px;
+  cursor: pointer;
 }
 
 .CategoryTitle {
@@ -168,7 +170,7 @@ nav {
   font-family: 'Regular';
   font-size: 14px;
   background-color: var(--ColorLightGrey);
-  border: 1px solid var(--ColorDarkGrey);
+  border: 1px solid var(--ColorMediumGrey);
   border-radius: 5px;
 }
 
@@ -206,6 +208,7 @@ nav {
   height: 16px;
   border-bottom: 0.5px solid var(--ColorGrey);
   padding: 10px;
+  cursor: pointer;
 }
 
 .ItemIcon {
@@ -310,6 +313,16 @@ nav {
   outline: none;
   opacity: 0.7;
   transition: opacity .2s;
+}
+
+.NutritionalValuesTitle {
+  padding-top: 5px;
+}
+
+.NutritionalValuesTitle,
+.SliderTitle {
+  font-size: 12px;
+  color: var(--ColorDarkGrey);
 }
     
 .SliderValue {
